Fixed scrolling issue; whitespace removed. Still not sticky in chrome

--- a/frontend/app/styles/custom.scss
+++ b/frontend/app/styles/custom.scss
@@ -331,12 +331,6 @@ div.row-fluid.person-list > div.span10 > div.container-fluid.round-border {
   z-index: 999 !important;
 }
 
-#skills-list-table tbody:before {
-  content: "";
-  display: block;
-  height: 110px;
-}
-
 #skills-list-table th {
   font-weight: normal;
 }
